WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45438
[Chromium][DRT] editing/spelling/spelling-backspace-between-lines.html fails
https://bugs.webkit.org/show_bug.cgi?id=45438
Summary
[Chromium][DRT] editing/spelling/spelling-backspace-between-lines.html fails
Hajime Morrita
Reported
2010-09-08 21:28:35 PDT
missing textInputController.hasSpellingMarker()
Attachments
Patch
(7.31 KB, patch)
2011-08-11 20:50 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Patch
(6.75 KB, patch)
2011-08-11 21:38 PDT
,
Hajime Morrita
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Hajime Morrita
Comment 1
2010-11-09 20:22:24 PST
It doesn't look not related to hasSpellingmarker(). A string passed to EditorClient is not what expected.
Hajime Morrita
Comment 2
2011-08-11 20:50:32 PDT
Created
attachment 103729
[details]
Patch
Hajime Morrita
Comment 3
2011-08-11 20:53:01 PDT
Kent-san, could you take a look? This change also removes windows expectation, which was wrong, and was referred from the chromium test runner unexpectedly, that made the failed test pass. The change on MockSpellChecker fixes the problem so that chromium can match the correct expectation.
Kent Tamura
Comment 4
2011-08-11 21:02:41 PDT
Comment on
attachment 103729
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=103729&action=review
> LayoutTests/ChangeLog:11 > + * platform/win/Skipped: > + * platform/win/editing/spelling/spelling-backspace-between-lines-expected.txt: Removed.
Apple Windows port has a policy that it contains failure expectations. So, don't remove it.
Hajime Morrita
Comment 5
2011-08-11 21:38:31 PDT
Created
attachment 103731
[details]
Patch
Kent Tamura
Comment 6
2011-08-11 21:39:31 PDT
Comment on
attachment 103731
[details]
Patch ok
Hajime Morrita
Comment 7
2011-08-11 21:40:01 PDT
Comment on
attachment 103731
[details]
Patch Thanks!
WebKit Review Bot
Comment 8
2011-08-11 22:38:56 PDT
Comment on
attachment 103731
[details]
Patch Clearing flags on attachment: 103731 Committed
r92928
: <
http://trac.webkit.org/changeset/92928
>
WebKit Review Bot
Comment 9
2011-08-11 22:39:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug