[Chromium][DRT] editing/spelling/spelling-backspace-between-lines.html fails https://bugs.webkit.org/show_bug.cgi?id=45438

Reviewed by Kent Tamura.

Tools:

MockSpellCheck was assuming the input of spellCheckWord() is a word.
But it can be a series of word. This change made spellCheckWord()
understand simple word boundary which appears in tests.

* DumpRenderTree/chromium/MockSpellCheck.cpp:
(MockSpellCheck::spellCheckWord):

LayoutTests:

Added a chromium specific expectation because chromium will use window's (wrong) expectation
unless chromium has its own.

* platform/chromium/editing/spelling/spelling-backspace-between-lines-expected.txt: Added


Canonical link: https://commits.webkit.org/81975@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92928 268f45cc-cd09-0410-ab3c-d52691b4dbfc